--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
-        container_name: master
+        container_name: redis_master
         ports:
           - "6379:6379"
         restart: always
